add basic header structure

--- a/index.html
+++ b/index.html
@@ -5,13 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Latin people conecting in Berlin">
+    <meta name="keywords" contents="latins in Berlin, latinos en berlin">
+
+    <link rel="stylesheet" href="assets/css/style css">
+    <title>Latins in Berlin</title>
 </head>
 
 <body>
-    <h1>
-        Hello World!!
-    </h1>
+    <header>
+        <a href="index.html">
+            <h1>Latins in Berlin</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Club ethos
+    </section>
+    <section>
+        Running location, distances an times
+    </section>
+
+
+    <footer>
+        Social links here
+    </footer>
 </body>
 
 </html>
