--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
             <h3>dublin fockland & phoenix park</h3>
         </div>
     </section>
-    <section>
-        Club ethos
-    </section>
+    <section id="club-ethos">
+<h1>Why love running with us?</h1>   
+<div id="left-about">
+left
+</div> 
+<div id="right-about">
+rigth
+</div>
+<div id="center-about">
+center
+</div>
+</section>
     <section>
         Running location, distances an times
     </section>
