--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </section>
     <section id="club-ethos">
-<h1>Why love running with us?</h1>   
+<h2 id="welcome">Why love running with us?</h2>   
 <div id="left-about">
 <div class="left-about-heading">
     <h2>Feel Healthy</h2>
@@ -76,7 +76,9 @@
     </div>
 </div>
 <div id="center-about">
-center
+    <div id="circle-container">
+        <div id="circle-cover-bg"></div>
+    </div>
 </div>
 </section>
     <section>
