add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,24 @@
 
 
     <footer>
-        Social links here
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-laberl="visit our facebook page (opens in a new tab"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-laberl="visit our twitter page (opens in a new tab"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-laberl="visit our youtube page (opens in a new tab"><i class="fa-brands fa-youtube"></i></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-laberl="visit our instagram page (opens in a new tab"><i class="fa-brands fa-instagram"></i></i></a>
+            </li>
+        </ul>
     </footer>
 
 
