add style to footer social media icons

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-laberl="visit our facebook page (opens in a new tab"><i class="fa-brands fa-facebook"></i></a>
