add core html element to gallery page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Latin people conecting in Berlin">
     <meta name="keywords" contents="latins in Berlin, latinos en berlin">
 
-    <link rel="stylesheet" href="assets/css/style css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Latins in Berlin</title>
 </head>
 
@@ -23,7 +23,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="#">Sign up</a>
