--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="index.html" >Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html" class="active">Gallery</a>
@@ -32,7 +32,9 @@
         </nav>
     </header>
 
-
+<section>
+    
+</section>
 
     <footer>
         <ul id="social-networks">
