--- a/index.html
+++ b/index.html
@@ -3,149 +3,118 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Latin people conecting in Berlin">
-    <meta name="keywords" contents="latins in Berlin, latinos en berlin">
+    <meta name="description" content="Community for the latinos in berlin">
+    <meta name="keywords" content="latinos berlin, restaurant latino, latin events">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Latins in Berlin</title>
+    <title>Latinos in Berlin</title>
 </head>
 
 <body>
+    <!--Header and menu section-->
     <header>
         <a href="index.html">
-            <h1 id="logo">Latins in Berlin</h1>
+            <h1 id="logo">Latinos in Berlin</h1>
         </a>
-        <nav id="menu">
-            <ul>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="signup.html">Sign Up</a>
+                </li>
+                <li>
+                    <a href="restaurants.html">Restaurants</a>
+                </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="#">Sign up</a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <!--First image-->
     <section id="hero-outer">
+
         <div id="hero-image"></div>
-        <div id="cover-text">
-            <h2>Love Running</h2>
-            <h3>dublin fockland & phoenix park</h3>
-        </div>
+
     </section>
-    <section id="club-ethos">
-        <h2 id="welcome">Why love running with us?</h2>
+    <br>
+
+<!--About us section-->
+    <section id="latin-ethos">
+        <h2 id="welcome">About us</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
+                <h2> Who are we?</h2>
                 <hr>
                 <p>
-                    Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
-                    health. Plus, it burns
-                    calories and can build strength.
+                We are a community of Latinamerican people living in Berlin where, despite the distance, we remain connected to our culture.
                 </p>
             </div>
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Purpose </h2>
+                <hr>
+                <p>Our purpose is to create an active community of Latin Americans where we can promote our culture here in Berlin.</p>
+            </div>
+            <div class="left-about-heading">
+                <h2>What will you find here? </h2>
                 <hr>
                 <p>
-                    Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
-                    you more energetic,
-                    more awake and, yes, happier.
+                For now, you will only find latin restaurants and cafes, but our idea is to keep expanding so that
+                you can also find
+                shops of all kinds and events.
+                </p>
+            </div>
+            <div class="left-about-heading">
+                <h2>How can I be part of this community?</h2> 
+                <hr>
+                <p>
+                    Very easy!! You just have to subscribe on the sign up page and, if you want to promote your business or event, write in
+                    the comment so that we can contact you.
+                    If you want to go to the subscription page you must go to the corresponding page or just <a href="signup.html"><b>click here!!</b></a> 
                 </p>
             </div>
         </div>
-        <div id="right-about">
-            <div class="right-about-heading">
-                <h2>Get Social <i class="fa-solid fa-globe"></i></h2>
-                <hr>
-                <p>
-                    When we run with others, we can run farther and faster more easily. Social running can pull you out
-                    of a running funk or
-                    low mood, inspire you to try new events
-                </p>
-            </div>
-            <div class="right-about-heading">
-                <h2>Feel Strong</h2>
-                <hr>
-                <p>
-                    Running strengthens your heart by pumping blood more effectively through your body.
-                </p>
-            </div>
-        </div>
-        <div id="center-about">
-            <div id="circle-container">
-                <div id="circle-cover-bg"></div>
+        <div>
+            
+            <div id="right-about">
+                <div id="circle-container">
+                    <div id="circle-cover-bg"></div>
+                    <h2 id="to-restaurant"><a href="restaurants.html">Restaurants</a></h2>
+                </div>
             </div>
         </div>
     </section>
-    <section id="times">
-        <div>
-            <h2>Urban</h2>
-            <h3>Monday</h3>
-            <h3>5k</h3>
-            <h3>The markfr Hotel</h3>
-            <h3>18:30</h3>
-        </div>
-        <div>
-            <h2>trail</h2>
-            <h3>wednesday</h3>
-            <h3>10k</h3>
-            <h3>phoenix park</h3>
-            <h3>18:30</h3>
-        </div>
-        <div>
-            <h2>Urban</h2>
-            <h3>Friday</h3>
-            <h3>5k</h3>
-            <h3>The markfr Hotel</h3>
-            <h3>18:30</h3>
-        </div>
-        <div>
-            <h2>Urban</h2>
-            <h3>Saturday</h3>
-            <h3>10k</h3>
-            <h3>Phoenix park</h3>
-            <h3>18:30</h3>
-        </div>
-        <div>
-            <h2>Coffee</h2>
-            <h3>Sunday</h3>
-            <h3>0k</h3>
-            <h3>The markfr Hotel</h3>
-            <h3>11:30</h3>
-        </div>
-    </section>
+   
+    <hr>
+    <!--Footer Section-->
+            <footer>
+                <ul class="social-networks">
+                    <li>
+                        <a href="https://facebook.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)"><i
+                                class="fab fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Twitter page (opens in a new tab)"><i
+                                class="fab fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="Visit our YouTube page (opens in a new tab)"><i
+                                class="fab fa-youtube-square"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)"><i
+                                class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </footer>
 
-
-    <footer>
-        <ul id="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-laberl="visit our facebook page (opens in a new tab"><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com/" target="_blank" rel="noopener"
-                    aria-laberl="visit our twitter page (opens in a new tab"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-laberl="visit our youtube page (opens in a new tab"><i class="fa-brands fa-youtube"></i></i></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-laberl="visit our instagram page (opens in a new tab"><i class="fa-brands fa-instagram"></i></i></a>
-            </li>
-        </ul>
-    </footer>
-
-
-    <script src="https://kit.fontawesome.com/c22f6c00f0.js" crossorigin="anonymous"></script>
+            <!-- font awesome script  -->
+            <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
