Rewrite restaurant.html format

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <!-- font awesome script  -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS and other scripts -->
+    <!-- Bootstrap  -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
