Rewrite th signup.html

--- a/restaurants.html
+++ b/restaurants.html
@@ -21,18 +21,22 @@
         <a href="index.html">
             <h1 id="logo">Latinos in Berlin</h1>
         </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="signup.html">Sign Up</a>
-                </li>
-                <li>
-                    <a class="active" href="restaurants.html">Restaurants</a>
-                </li>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+                <div class="navbar" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " style="color: #af9983" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" style="color: #884f2b" href="restaurants.html">Restaurants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: #af9983" href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -50,31 +54,35 @@
             <div class="row">
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2>Sabor Latino</h2>
+                        <h2 class="text-center text-white">Sabor Latino</h2>
                         <br>
-                        <h3>TRADITION AND INNOVATION WITH TASTE!</h3>
+                        <h3 class="text-center text-white">TRADITION AND INNOVATION WITH TASTE!</h3>
                         <br>
-                        <p>Experience the diversity of Peru's traditional cuisine! The varied Peruvian cuisine is
+                        <p class="text-center text-white">Experience the diversity of Peru's traditional cuisine! The varied Peruvian cuisine is
                             favoured by the diversity of the
                             country's natural features: The coast offers a wide variety of fish and seafood, the Andean
                             highlands are home to the
                             potato and the Inca grain quinoa, and the Amazon basin is blessed with wonderful exotic
                             fruits and spices!
-                            <hr>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
                             Badensche Straße 35, 10715, Berlin
-                            <hr>
+                            </p>
+                            <hr class="hr-food">
                         </p>
-                        <a href="https://www.saborlatino.berlin/men" class="link" target="_blank" rel="help"><b>Click
+                        <p class="text-center text-white">
+                        <a href="https://www.saborlatino.berlin/men" class="link text-center text-white" target="_blank" rel="help"><b>Click
                                 here to see more</b></a>
+                        </p>
                     </div>
                 </div>
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2>La Pequeña Habana</h2>
+                        <h2 class="text-center text-white">La Pequeña Habana</h2>
                         <br>
-                        <h3>CUBAN AND CARIBBEAN FOOD</h3>
+                        <h3 class="text-center text-white">CUBAN AND CARIBBEAN FOOD</h3>
                         <br>
-                        <p>Cuba is a great mixture of Spanish, African and Caribbean aboriginal cultural essences,
+                        <p class="text-center text-white">Cuba is a great mixture of Spanish, African and Caribbean aboriginal cultural essences,
                             resulting in
                             rumba, son, habano,
                             rum, joie de vivre and a cuisine of delicious flavours.
@@ -83,35 +91,42 @@
                             you to feel
                             our warmth,
                             savouring our exquisite dishes and delicious cocktails.
-
-                            <hr>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
                             Eisenacher Straße 48, 10823 Berlin
-                            <hr>
+                            </p>
+                            <hr class="hr-food">
                         </p>
-                        <a href="https://pequena-habana.de/" class="link" target="_blank" rel="help"><b>Click here to
+                        <p class="text-center text-white">
+                        <a href="https://pequena-habana.de/" class="link text-white target="_blank" rel="help"><b>Click here to
                                 see
                                 more</b></a>
+                        </p>
                     </div>
                 </div>
                 <div class="col mb-3">
                     <div>
-                        <h2> Girasol</h2>
+                        <h2 class="text-center text-white"> Girasol</h2>
                         <br>
-                        <h3>AUTHENTIC MEXICAN RESTAURANT</h3>
+                        <h3 class="text-center text-white">AUTHENTIC MEXICAN RESTAURANT</h3>
                         <br>
-                        <p>The Girasol restaurant offers diners in Berlin a variety of Mexican cuisine. A visit is
+                        <p class="text-center text-white">The Girasol restaurant offers diners in Berlin a variety of Mexican cuisine. A visit is
                             especially
                             recommended on warm summer evenings, even if you can eat and drink outdoors. We are open to
                             our guests
                             seven days a week.
-                            <hr>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
                             Raumerstraße 30,
                             10437, Berlín
-                            <hr>
+                            </p>
+                            <hr class="hr-food">
                         </p>
-                        <a href="https://www.restaurant-girasol.de/speisen" class="link" target="_blank"
+                        <p class="text-center text-white">
+                        <a href="https://www.restaurant-girasol.de/speisen" class="link text-white" target="_blank"
                             rel="help">Click
                             here to see more</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -119,36 +134,44 @@
             <div class="row">
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2>La tierra colombiana</h2>
+                        <h2 class="text-center text-white">La tierra colombiana</h2>
                         <br>
-                        <h3>COLOMBIAN RESTAURANT</h3>
+                        <h3 class="text-center text-white">COLOMBIAN RESTAURANT</h3>
                         <br>
-                        <p>A piece of Latin America in Berlin.
+                        <p class="text-center text-white">A piece of Latin America in Berlin.
                             Typical products from Colombia and Latin America, Creole food and natural juices in a
                             traditional Latin atmosphere.
                             We cater for your social gatherings and Christmas
-                            <hr>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
                             Mittenwalder Str. 27
                             10961 Berlin
-                            <hr>
-                            <a href="http://tierra-colombiana.com/" class="link" target="_blank" rel="help">Click here
+                            </p>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
+                            <a href="http://tierra-colombiana.com/" class="link text-white" target="_blank" rel="help">Click here
                                 to see more</a>
+                            </p>
                         </p>
                     </div>
                 </div>
                 <div class="col mb-3">
                     <div>
-                        <h2>Macondo</h2>
+                        <h2 class="text-center text-white">Macondo</h2>
                         <br>
-                        <h3>Cafebar where you can taste the different and delicious latin flavours.</h3>
+                        <h3 class="text-center text-white">Cafebar</h3>
                         <br>
-                        <p>
-                            <hr>
+                        <p class="text-center text-white"> A Cafe where you can taste the different and delicious latin flavours.
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
                             Gärtner Str. 14, 10245 Berlin
-                            <hr>
-                            <a href="https://www.macondocafebar.com/" class="link" target="_blank" rel="help">Click here
+                            </p>
+                            <hr class="hr-food">
+                            <p class="text-center text-white">
+                            <a href="https://www.macondocafebar.com/" class="link text-white" target="_blank" rel="help">Click here
                                 to see
                                 more</a>
+                            </p>
                         </p>
                     </div>
                 </div>
@@ -180,7 +203,7 @@
 
     <!-- font awesome script  -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS and other scripts -->
+    <!-- Bootstrap  -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
