--- a/index.html
+++ b/index.html
@@ -17,21 +17,24 @@
     <!--Header and menu section-->
     <header>
         <a href="index.html">
-            <i class="fa-thin fa-earth-americas fa-sm" style="color: #884f2b;"></i>
             <h1 id="logo">Latinos in Berlin</h1>
         </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="signup.html">Sign Up</a>
-                </li>
-                <li>
-                    <a href="restaurants.html">Restaurants</a>
-                </li>
-                <li>
-                    <a href="index.html" class="active">Home</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-light bg-white">
+            <div class="container-fluid">
+                <div class="navbar" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active d-flex" style="color: #884f2b" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex" style="color: #af9983" href="restaurants.html">Restaurants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  style="color: #af9983" href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
