--- a/signup.html
+++ b/signup.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Community for the latinos in berlin">
+    <meta name="description" content="Community for the latinos in berlin">
     <meta name="keywords" content="latinos berlin, restaurant latino, latin events">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-..." crossorigin="anonymous" />
+    <!-- Bootstrap 4 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Latinos in Berlin</title>
 </head>
@@ -17,41 +21,67 @@
         <a href="index.html">
             <h1 id="logo">Latinos in Berlin</h1>
         </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a class="active" href="signup.html">Sign Up</a>
-                </li>
-                <li>
-                    <a href="restaurants.html">Restaurants</a>
-                </li>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+                <div class="navbar" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: #af9983" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: #af9983" href="restaurants.html">Restaurants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" style="color: #884f2b" href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
     <!--Form section-->
-    <section class="form-section">
-        <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
-            <h2>Let's get you signed up!</h2>
-            <h3>If you want to join into our community, tell us in our comment section</h3>
-            <label for="fname">First Name</label>
-            <input id="fname" class="text-input" type="text" name="first_name" required />
-            <label for="lname">Last Name</label>
-            <input id="lname" class="text-input" type="text" name="last_name" required />
-            <label for="email">Email Address</label>
-            <input id="email" class="text-input" type="email" name="email_address" required />
-            <label for="comments">Comments</label>
-            <input name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
-            <input class="join-button" type="submit" value="Let's enjoy!" />
-
-        </form>
+ 
+    <section class="wrapper">
+        <div class="container">
+            <div class="row form-section">
+                <div class="col-md-12 row align-items-center">
+                    <form class="signup-form">
+                        <h2>Let’s get you signed up!</h2>
+                        <h3>If you want to join into our community, tell us in our comment section</h3>
+                        <div class="form-group col-lg-12">
+                            <label for="InputFirstName">First Name</label>
+                            <input type="FirtName" class="form-control" id="InputFirstName"
+                                placeholder="Enter First Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="InputLastName">Last Name</label>
+                            <input type="password" class="form-control" id="InputLastName"
+                                placeholder="Enter Last Name">
+                        </div>
+                        <label for="InputEmail">Email address</label>
+                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                            placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                        <div> 
+                            <label for="comments">Comments</label> <textarea name="comments" id="comments"
+                            class="form-control" required></textarea>
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <!--Footer-->
-    <footer>
+    <div class="push"></div>
+    </div>
+
+    <!--footer section-->
+    <footer class="footer">
+        <br>
         <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"
@@ -74,6 +104,8 @@
 
     <!-- font awesome script  -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap  -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
