Last styles details and cleaning the code

--- a/restaurants.html
+++ b/restaurants.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2 class="text-center text-white">Sabor Latino</h2>
+                        <h2 class="text-center text-white mt-3">Sabor Latino</h2>
                         <br>
                         <h3 class="text-center text-white">TRADITION AND INNOVATION WITH TASTE!</h3>
                         <br>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2 class="text-center text-white">La Pequeña Habana</h2>
+                        <h2 class="text-center text-white mt-3">La Pequeña Habana</h2>
                         <br>
                         <h3 class="text-center text-white">CUBAN AND CARIBBEAN FOOD</h3>
                         <br>
@@ -98,7 +98,7 @@
                             <hr class="hr-food">
                         </p>
                         <p class="text-center text-white">
-                        <a href="https://pequena-habana.de/" class="link text-white target="_blank" rel="help"><b>Click here to
+                        <a href="https://pequena-habana.de/" class="link text-white" target="_blank" rel="help"><b>Click here to
                                 see
                                 more</b></a>
                         </p>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col mb-3">
                     <div>
-                        <h2 class="text-center text-white"> Girasol</h2>
+                        <h2 class="text-center text-white mt-3"> Girasol</h2>
                         <br>
                         <h3 class="text-center text-white">AUTHENTIC MEXICAN RESTAURANT</h3>
                         <br>
@@ -124,8 +124,8 @@
                         </p>
                         <p class="text-center text-white">
                         <a href="https://www.restaurant-girasol.de/speisen" class="link text-white" target="_blank"
-                            rel="help">Click
-                            here to see more</a>
+                            rel="help"><b>Click
+                            here to see more</b></a>
                         </p>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col mb-3 mr-3">
                     <div>
-                        <h2 class="text-center text-white">La tierra colombiana</h2>
+                        <h2 class="text-center text-white mt-3">La tierra colombiana</h2>
                         <br>
                         <h3 class="text-center text-white">COLOMBIAN RESTAURANT</h3>
                         <br>
@@ -149,28 +149,28 @@
                             </p>
                             <hr class="hr-food">
                             <p class="text-center text-white">
-                            <a href="http://tierra-colombiana.com/" class="link text-white" target="_blank" rel="help">Click here
-                                to see more</a>
+                            <a href="http://tierra-colombiana.com/" class="link text-white" target="_blank" rel="help"><b>Click here
+                                to see more</b></a>
                             </p>
                         </p>
                     </div>
                 </div>
                 <div class="col mb-3">
                     <div>
-                        <h2 class="text-center text-white">Macondo</h2>
+                        <h2 class="text-center text-white mt-3">Macondo</h2>
                         <br>
                         <h3 class="text-center text-white">Cafebar</h3>
                         <br>
-                        <p class="text-center text-white"> A Cafe where you can taste the different and delicious latin flavours.
+                        <p class="text-center text-white"> Indulge in a variety of delicious and authentic Latin flavors at our cozy and inviting cafebar. Come visit us today and
+                        experience the best of Latin food and culture!
                             <hr class="hr-food">
                             <p class="text-center text-white">
                             Gärtner Str. 14, 10245 Berlin
                             </p>
                             <hr class="hr-food">
                             <p class="text-center text-white">
-                            <a href="https://www.macondocafebar.com/" class="link text-white" target="_blank" rel="help">Click here
-                                to see
-                                more</a>
+                            <a href="https://www.macondocafebar.com/" class="link text-white" target="_blank" rel="help"> <b>Click here
+                                to see more</b></a>
                             </p>
                         </p>
                     </div>
@@ -207,4 +207,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
-</html>f
+</html>
