--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
                     <form class="signup-form">
                         <h2>Let’s get you signed up!</h2>
                         <h3>If you want to join into our community, tell us in our comment section</h3>
-                        <div class="form-group col-lg-12">
+                        <div class="form-group">
                             <label for="InputFirstName">First Name</label>
                             <input type="FirtName" class="form-control" id="InputFirstName"
                                 placeholder="Enter First Name">
