--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <a href="index.html">
             <h1 id="logo">Latinos in Berlin</h1>
         </a>
-        <nav class="navbar navbar-light bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <div class="navbar" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active d-flex" style="color: #884f2b" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link active" style="color: #884f2b" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link d-flex" style="color: #af9983" href="restaurants.html">Restaurants</a>
+                            <a class="nav-link" style="color: #af9983" href="restaurants.html">Restaurants</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"  style="color: #af9983" href="signup.html">Sign Up</a>
