Fix indexation problem and final deployment

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Community for the latinos in berlin">
     <meta name="keywords" content="latinos berlin, restaurant latino, latin events">
     <!-- Bootstrap 4 CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Latinos in Berlin</title>
 </head>
@@ -40,9 +39,7 @@
 
     <!--First image-->
     <section id="hero-outer">
-
         <div id="hero-image"></div>
-
     </section>
     <br>
     <hr>
@@ -129,5 +126,4 @@
     <!-- Bootstrap  -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
